--- a/inst/www/shiny.css
+++ b/inst/www/shiny.css
@@ -1,29 +1,49 @@
 table tr:hover td {
   font-weight:bold;text-decoration:none
 }
-table tr.covered td{
-  background-color:rgba(95,151,68,0.3)
+
+table tr.mix td{
+  background-color:rgba(0,128,128,0.3)
 }
-table tr:hover.covered .num{
-  background-color:rgba(95,151,68,0.7)
-}
-table tr.missed td{
-  background-color:rgba(185,73,71,0.3)
-}
-table tr:hover.missed .num{
-  background-color:rgba(185,73,71,0.7)
+table tr:hover.mix .num{
+  background-color:rgba(0,128,128,0.7)
 }
 
-table tr.missed:hover td{
+table tr.mix:hover td{
   -webkit-box-shadow:0 -2px 0 0 #b94947 inset;
   -moz-box-shadow:0 -2px 0 0 #b94947 inset;
   box-shadow:0 -2px 0 0 #b94947 inset
 }
-table tr.covered:hover td{
-  -webkit-box-shadow:0 -2px 0 0 #5f9744 inset;
-  -moz-box-shadow:0 -2px 0 0 #5f9744 inset;
-  box-shadow:0 -2px 0 0 #5f9744 inset
+
+
+table tr.unused_local td{
+  background-color:rgba(248,148,6,0.3)
 }
+
+table tr:hover.unused_local .num{
+  background-color:rgba(248,148,6,0.7)
+}
+
+table tr.unused_local:hover td{
+  -webkit-box-shadow:0 -2px 0 0 #b94947 inset;
+  -moz-box-shadow:0 -2px 0 0 #b94947 inset;
+  box-shadow:0 -2px 0 0 #b94947 inset
+}
+
+
+table tr.no_global_binding td{
+  background-color:rgba(185,73,71,0.3)
+}
+table tr:hover.no_global_binding .num{
+  background-color:rgba(185,73,71,0.7)
+}
+
+table tr.no_global_binding:hover td{
+  -webkit-box-shadow:0 -2px 0 0 #b94947 inset;
+  -moz-box-shadow:0 -2px 0 0 #b94947 inset;
+  box-shadow:0 -2px 0 0 #b94947 inset
+}
+
 
 table tr.never td{
   background-color:transparent
@@ -32,6 +52,7 @@ table tr.never td{
 table .num {
   border-right: 1px solid rgba(0,0,0,0.1)
 }
+
 td.coverage em {
   opacity: 0.5;
 }
@@ -40,6 +61,7 @@ table td.coverage {
   font-weight: bold;
   text-align: right;
 }
+
 table.table-condensed pre {
   background-color: transparent;
   margin: 0;
@@ -47,6 +69,7 @@ table.table-condensed pre {
   border: 0;
   font-size: 11px;
 }
+
 div#files td {
   padding: 0;
   padding-left: 5px;
